// TODO: change all money-related values to floats (due to dealing with percents) or find workaround.
// TODO: add lottery messages
// TODO: add game (quiz/bidding) messages.
syntax = "proto3";

package server;
option go_package = ".;pb";

message Player {
  string user_id = 1;
  string username = 2;
  int32 points = 3;
}

message JoinRequest { string username = 1; }

message JoinResponse {
  string user_id = 1;
  string game_id = 2;

  // players who already joined the game
  repeated Player players = 3;

  // fields related to the game configs
  int32 duration = 4;
  int32 player_points = 5;
  int32 bank_points_per_player = 6;
  int32 credit_interest = 7;
  int32 deposit_interest = 8;
  int32 credit_time = 9;
  int32 deposit_time = 10;
  int32 theft_time = 11;
  int32 theft_percentage = 12;
  int32 lottery_time = 13;
  int32 lottery_max_win = 14;
}

message LeaveRequest {
  string user_id = 1;
  string game_id = 2;
}

message LeaveResponse {}

// Ideally, we have also to check
// user_id. But for now, let's simply
// use game_id. Anyone, even people outside
// the game can start it.
message StartRequest {
  string game_id = 1;
}

message StartResponse {}

message CreditRequest {
  string user_id = 1;
  string game_id = 2;
  int32 value = 3;
}

// In case of credit, it cannot be granted
// if the bank doesn't have enough money or
// if the user asks too much. These reasons
// will be stated in "explanation" field if
// "success" is false.
message CreditResponse {
  bool success = 1;
  string explanation = 2;
}

message DepositRequest {
  string user_id = 1;
  string game_id = 2;
  int32 value = 3;
}

// In case of deposit, it cannot be granted
// if the user doesn't have enough money or
// the user puts too much. These reasons
// will be stated in "explanation" field if
// "success" is false.
message DepositResponse {
  bool success = 1;
  string explanation = 2;
}

message LotteryRequest {
  string user_id = 1;
  string game_id = 2;
  int32 cell_index = 3; // has to be from 1 to 9
}

message LotteryResponse {
  bool success = 1;
  repeated int32 cell_values = 2; // 9 values for each cell
  int32 win_points = 3;
}

message StreamRequest {
  string user_id = 1;
  string game_id = 2;
}

message StreamResponse {
  oneof event {
    // Events for game in "Waiting" state.
    Join join = 1;
    Leave leave = 2;
    // Events for game in "Active" state.
    Start start = 3;
    Finish finish = 4;
    Transaction transaction = 5;
  }

  message Join { Player player = 1; }

  message Leave { string user_id = 1; }

  // It might have contained time so that client
  // can precisely estimate the remaining time.
  // However, we will ignore it for now.
  message Start {}

  message Finish {
    repeated Player players = 1;
    string winner_user_id = 2;
  }

  message Transaction {
    // Server will recalculate the amount
    // of money for each player and send it
    // to client. This way, client won't have
    // to do calculations. It can just update
    // the fields showing amounts of "points"
    // for each player.
    repeated Player players = 1;

    oneof event {
      UseCredit use_credit = 2;
      UseDeposit use_deposit = 3;
      ReturnCredit return_credit = 4;
      ReturnDeposit return_deposit = 5;
      Theft theft = 6;
      Lottery lottery = 7;
    }

    message UseCredit {
      string user_id = 1;
      int32 value = 2;
    }

    message UseDeposit {
      string user_id = 1;
      int32 value = 2;
    }

    message ReturnCredit {
      string user_id = 1;
      int32 value = 2;
    }

    message ReturnDeposit {
      string user_id = 1;
      int32 value = 2;
    }

    message Theft {
      repeated RobbedPlayer robbed_players = 1;

      message RobbedPlayer {
        string user_id = 1;
        // value shows how much money has been stolen from the player.
        int32 value = 2;
      }
    }

    message Lottery {
      string user_id = 1;
      int32 value = 2;
    }
  }
}

// The service will not use global UTC time.
// It will just order requests based on the order
// of arrival to the server.
// The requirement to the service is to maintain
// the invariant that total amount of money is
// unchangeable.
service Game {
  // To join, user needs to provide username to be displayed.
  // If all games are full or finished, we will
  // create a new one.
  // Unique user_id will be generated for using within a game
  // and returned.
  // We will also return the initial game configs such as
  // game duration, amount of points, etc.
  // NOTE: players can only join or leave the "Waiting" game.
  // For "Active" game, new users cannot join and existing
  // users cannot leave.
  rpc Join(JoinRequest) returns(JoinResponse) {}
  rpc Leave(LeaveRequest) returns(LeaveResponse) {}

  // One of the users will start the game. We cannot automatically
  // start the game, since it is not some popular project with
  // a constant flow of users - there may not be enough users in
  // a game.
  rpc Start(StartRequest) returns(StartResponse) {}

  rpc Credit(CreditRequest) returns(CreditResponse) {}

  rpc Deposit(DepositRequest) returns(DepositResponse) {}

  rpc Lottery(LotteryRequest) returns(LotteryResponse) {}

  // Other RPCs related to the game scenario will be similar to
  // the Credit and Deposit RPCs.

  rpc Stream(StreamRequest) returns(stream StreamResponse) {}
}